Fixed styling dark mode.

--- a/client/src/components/Atoms/CurvedButton/CurvedButton.module.css
+++ b/client/src/components/Atoms/CurvedButton/CurvedButton.module.css
@@ -4,6 +4,7 @@
   background-color: transparent;
   cursor: pointer;
   transition: ease-in-out 0.25s;
+  color: currentColor;
 }
 
 .CurvedButton:hover {
