--- a/client/src/pages/Start/StartPage.module.css
+++ b/client/src/pages/Start/StartPage.module.css
@@ -39,6 +39,7 @@
   display: flex;
   flex-wrap: nowrap;
   gap: 12px;
+  color: var(--primaryColor);
 }
 
 @media screen and (min-width: 768px) {
